--- a/notebooks/training_mask_rcnn.ipynb
+++ b/notebooks/training_mask_rcnn.ipynb
@@ -532,14 +532,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[03/29 20:40:56 d2.checkpoint.detection_checkpoint]: \u001b[0m[DetectionCheckpointer] Loading from ../data/models/mask_rcnn/model_final.pth ...\n"
+      "d:\\Projects\\FishMaze\\venv\\lib\\site-packages\\torch\\functional.py:539: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:3638.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
      ]
     },
     {
@@ -564,7 +565,7 @@
     "\n",
     "# --- CONFIG ---\n",
     "IMAGE_PATH = \"../data/training/testing/mask_rcnn/frame_29940.png\"\n",
-    "MODEL_WEIGHTS = \"../data/models/mask_rcnn/model_final.pth\"  # path to trained model\n",
+    "MODEL_WEIGHTS = \"../data/models/mask_rcnn/mask_rcnn_R_50_C4_1x.pth\"  # path to trained model\n",
     "WINDOW_SIZE = 512\n",
     "STRIDE =  256 # overlapping windows\n",
     "SCORE_THRESH = 0.9\n",
