Dataset extraction and refinement.

--- a/notebooks/training_efficientnet_unet.ipynb
+++ b/notebooks/training_efficientnet_unet.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n",
     "import sys\n",
     "\n",
     "import sys\n",
@@ -18,16 +17,16 @@
     "importlib.reload(maze)\n",
     "\n",
     "from maze.models import EfficientUNet\n",
+    "from maze.datasets import FishHeatmapDataset\n",
     "\n",
     "import numpy as np\n",
-    "import cv2\n",
     "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
+    "import pandas as pd\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.utils.data import DataLoader\n",
     "from torchvision import transforms\n",
     "from torch.utils.tensorboard import SummaryWriter"
    ]
@@ -43,64 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class FishHeatmapDataset(Dataset):\n",
-    "    def __init__(self, annotation_json, image_dir, heatmap_dir,\n",
-    "                 img_transform=None, joint_transform=None):\n",
-    "        self.samples = []\n",
-    "        self.img_transform = img_transform\n",
-    "        self.joint_transform = joint_transform\n",
-    "\n",
-    "        with open(annotation_json, 'r') as f:\n",
-    "            coco_data = json.load(f)\n",
-    "\n",
-    "        for img_info in coco_data['images']:\n",
-    "            file_name = img_info['file_name']\n",
-    "            img_path = os.path.join(image_dir, file_name)\n",
-    "            heatmap_path = os.path.join(heatmap_dir, os.path.splitext(file_name)[0] + '.npy')\n",
-    "\n",
-    "            image = cv2.imread(img_path)\n",
-    "            if image is None:\n",
-    "                continue\n",
-    "            image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "            heatmap = np.load(heatmap_path)  # float32, assumed [0, 1]\n",
-    "\n",
-    "            self.samples.append((image, heatmap, file_name))\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.samples)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        image, heatmap, _ = self.samples[idx]\n",
-    "\n",
-    "        # Convert image to PIL (color image)\n",
-    "        image = Image.fromarray(image)\n",
-    "        heatmap_tensor = torch.from_numpy(heatmap).unsqueeze(0)  # [1, H, W]\n",
-    "\n",
-    "        # Apply same random transforms to both\n",
-    "        if self.joint_transform:\n",
-    "            seed = np.random.randint(0, 10000)\n",
-    "            torch.manual_seed(seed)\n",
-    "            image = self.joint_transform(image)\n",
-    "            torch.manual_seed(seed)\n",
-    "            heatmap_tensor = self.joint_transform(heatmap_tensor)\n",
-    "\n",
-    "        # Individual transforms (image normalization etc.)\n",
-    "        if self.img_transform:\n",
-    "            image = self.img_transform(image)\n",
-    "\n",
-    "        # Clamp heatmap just in case and ensure float32\n",
-    "        heatmap_tensor = heatmap_tensor.clamp(0, 1).float()\n",
-    "\n",
-    "        return image, heatmap_tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,16 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load flagged indices\n",
+    "flagged_df = pd.read_csv('flagged_outliers.csv')\n",
+    "flagged_indices = set(flagged_df['index'].tolist())\n",
+    "\n",
     "train_ds = FishHeatmapDataset(\n",
     "    annotation_json=\"../data/training/coco/annotations_train.json\",\n",
     "    image_dir='../data/training/coco/images/',\n",
     "    heatmap_dir='../data/training/coco/heatmaps/',\n",
     "    joint_transform=joint_train,\n",
     "    img_transform=img_transform,\n",
+    "    exclude_indices=flagged_indices,\n",
     ")\n",
     "\n",
     "val_ds = FishHeatmapDataset(\n",
@@ -149,6 +96,7 @@
     "    heatmap_dir='../data/training/coco/heatmaps/',\n",
     "    joint_transform=joint_val,\n",
     "    img_transform=img_transform,\n",
+    "    exclude_indices=flagged_indices,\n",
     ")\n",
     "\n",
     "train_loader = DataLoader(train_ds, batch_size=32, shuffle=True, num_workers=0)\n",
