Massive project refactoring.

--- a/notebooks/coco_merge_two_bases.ipynb
+++ b/notebooks/coco_merge_two_bases.ipynb
@@ -2,29 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c1cbd859",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import os\n",
     "import shutil\n",
+    "import json\n",
     "from pathlib import Path\n",
-    "from collections import defaultdict\n",
     "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6bb000f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths to source datasets\n",
     "dataset1_images = Path(\"../data/training/coco/images\")\n",
-    "dataset2_images = Path(\"../data/training/fish\")  # same structure\n",
+    "dataset2_images = Path(\"../data/training/fish\")\n",
     "\n",
     "dataset_1_json = Path(\"../data/training/coco/annotations.json\")\n",
     "dataset_2_json = Path(\"../data/training/coco/labels_fish-maze_2025-04-04-07-41-19.json\")\n",
@@ -33,13 +31,12 @@
     "output_images_dir = output_dir / \"images\"\n",
     "output_json_path = output_dir / \"annotations.json\"\n",
     "\n",
-    "# Ensure output directory exists\n",
     "output_images_dir.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f55684d4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "89cacd18",
    "metadata": {},
    "outputs": [],
@@ -63,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "39e2568c",
    "metadata": {},
    "outputs": [],
@@ -127,19 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "aee3b10e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing images: 100%|██████████| 6104/6104 [00:21<00:00, 277.75it/s]\n",
-      "Processing fish: 100%|██████████| 73/73 [00:00<00:00, 260.29it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "process_dataset(coco1, dataset1_images)\n",
     "process_dataset(coco2, dataset2_images)"
@@ -147,19 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "17d463b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✅ Merged dataset saved to ..\\data\\training\\coco\\merged_output\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save merged JSON\n",
     "with open(output_json_path, 'w') as f:\n",
