Added CNN training header.

--- a/notebooks/training_cnn_classifier.ipynb
+++ b/notebooks/training_cnn_classifier.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convolution Classifier Training\n",
+    "\n",
+    "This notebook is used to train a convolutional binary classifier, recognizing the probability of a given image containing a fish. The model is trained on the images from the Russian sturgeon dataset, containing ~1500 images containing the fish, and ~1000 samples of background images.\n",
+    "\n",
+    "The model is a 3-layer convolutional neural network with 2 fully-connected layers (`aegear.model.ConvClassifier`).\n",
+    "\n",
+    "**Note** that this model is deprecated, and not used anymore in Aegear tracking systems. It was replaced by the U-Net architecture defined within the `aegear.model.EfficientUNet` class. The U-Net architecture is more robust and provides better performance for the task of fish detection in images, while also being able to estimate the gravity center of a fish, hence providing a more stable and overall more precise tracking."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
