Notebooks path management fixed.

--- a/notebooks/training_siamese_tracker.ipynb
+++ b/notebooks/training_siamese_tracker.ipynb
@@ -403,6 +403,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58e80f51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Root model path\n",
+    "pretrained_model_dir = '../models/'\n",
+    "\n",
+    "assert os.path.exists(pretrained_model_dir), f\"Pretrained model directory {pretrained_model_dir} does not exist.\"\n",
+    "\n",
+    "model_dir = '../data/training/models/siamese'\n",
+    "log_dir = f'{model_dir}/runs'\n",
+    "checkpoint_dir = f'{model_dir}/checkpoints'\n",
+    "epoch_vis = f'{model_dir}/epoch_vis'\n",
+    "\n",
+    "# Create directories if they don't exist\n",
+    "os.makedirs(model_dir, exist_ok=True)\n",
+    "os.makedirs(checkpoint_dir, exist_ok=True)\n",
+    "os.makedirs(log_dir, exist_ok=True)\n",
+    "os.makedirs(epoch_vis, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bc8abe19",
    "metadata": {},
    "outputs": [],
@@ -415,18 +439,15 @@
     "continue_training = os.environ.get(\"CONTINUE_TRAINING\", False)  # Continue training from the latest production model\n",
     "use_best_model = os.environ.get(\"USE_BEST_MODEL\", False) # If contnue_training is True, uses the cached best_model.pth, else uses the latest production model.\n",
     "\n",
-    "# Root model path\n",
-    "model_path = \"../data/models\"\n",
-    "\n",
     "if continue_training:\n",
     "   if use_best_model:\n",
     "      # Load the best model\n",
-    "      best_model_path = os.path.join(model_path, \"siamese\", \"best_model.pth\")\n",
+    "      best_model_path = os.path.join(model_dir, \"best_model.pth\")\n",
     "      assert os.path.exists(best_model_path)\n",
     "\n",
     "   else:     \n",
     "      siamese_model_filename = \"model_siamese\"\n",
-    "      best_model_path = get_latest_model_path(model_path, siamese_model_filename)\n",
+    "      best_model_path = get_latest_model_path(pretrained_model_dir, siamese_model_filename)\n",
     "\n",
     "   print(\"Continuing training of the Siamese model from:\", best_model_path)\n",
     "\n",
@@ -435,7 +456,7 @@
     "\n",
     "else:\n",
     "   efficient_unet_filename = \"model_efficient_unet\"\n",
-    "   latest_model_stats = get_latest_model_path(model_path, efficient_unet_filename)\n",
+    "   latest_model_stats = get_latest_model_path(pretrained_model_dir, efficient_unet_filename)\n",
     "\n",
     "   unet = EfficientUNet()\n",
     "   unet.load_state_dict(torch.load(latest_model_stats, map_location=device))\n",
@@ -535,25 +556,6 @@
     "        loss += F.mse_loss(rgb_search, rgb_template)\n",
     "\n",
     "    return loss / B\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58e80f51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_dir = '../data/models/siamese'\n",
-    "log_dir = f'{model_dir}/runs'\n",
-    "checkpoint_dir = f'{model_dir}/checkpoints'\n",
-    "epoch_vis = f'{model_dir}/epoch_vis'\n",
-    "\n",
-    "# Create directories if they don't exist\n",
-    "os.makedirs(model_dir, exist_ok=True)\n",
-    "os.makedirs(checkpoint_dir, exist_ok=True)\n",
-    "os.makedirs(log_dir, exist_ok=True)\n",
-    "os.makedirs(epoch_vis, exist_ok=True)"
    ]
   },
   {
