Handling training continuation flags.

--- a/notebooks/training_unet.ipynb
+++ b/notebooks/training_unet.ipynb
@@ -425,9 +425,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def str2bool(val):\n",
+    "    return str(val).lower() in (\"1\", \"true\", \"yes\", \"on\")\n",
+    "\n",
     "# Model settings for training\n",
-    "continue_training = False # Continue training from the latest production model\n",
-    "use_best_model = True # If set to True, uses the cached best_model.pth, else uses the latest production model.\n",
+    "continue_training = str2bool(os.environ.get(\"CONTINUE_TRAINING\", \"false\"))  # Continue training from the latest production model\n",
+    "use_best_model = str2bool(os.environ.get(\"USE_BEST_MODEL\", \"false\"))  # If contnue_training is True, uses the cached best_model.pth, else uses the latest production model.\n",
     "\n",
     "model = EfficientUNet(weights=\"IMAGENET1K_V1\")\n",
     "\n",
