--- a/notebooks/training_siamese_tracker.ipynb
+++ b/notebooks/training_siamese_tracker.ipynb
@@ -435,9 +435,12 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(\"Model loaded and moved to device:\", device)\n",
     "\n",
+    "def str2bool(val):\n",
+    "    return str(val).lower() in (\"1\", \"true\", \"yes\", \"on\")\n",
+    "\n",
     "# Model settings for training\n",
-    "continue_training = os.environ.get(\"CONTINUE_TRAINING\", False)  # Continue training from the latest production model\n",
-    "use_best_model = os.environ.get(\"USE_BEST_MODEL\", False) # If contnue_training is True, uses the cached best_model.pth, else uses the latest production model.\n",
+    "continue_training = str2bool(os.environ.get(\"CONTINUE_TRAINING\", \"false\"))  # Continue training from the latest production model\n",
+    "use_best_model = str2bool(os.environ.get(\"USE_BEST_MODEL\", \"false\"))  # If contnue_training is True, uses the cached best_model.pth, else uses the latest production model.\n",
     "\n",
     "if continue_training:\n",
     "   if use_best_model:\n",
