--- a/notebooks/training_unet.ipynb
+++ b/notebooks/training_unet.ipynb
@@ -9,13 +9,13 @@
     "import os\n",
     "import random\n",
     "import time\n",
+    "from urllib.request import urlretrieve\n",
     "\n",
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
-    "import gdown\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,9 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Device selection\n",
     "if torch.backends.mps.is_available():\n",
@@ -251,65 +259,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc3372bf78e547b6ab74b53d534b8251",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading from GCS:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "dataset_dir = '../data/training'\n",
+    "dataset_dir = \"../data/training\"\n",
     "video_dir = \"../data/video\"\n",
+    "\n",
+    "public_base_url = \"https://storage.googleapis.com/aegear-training-data\"\n",
     "\n",
     "annotations = {\n",
     "    \"E7\": {\n",
     "        \"file\": 'tracking_E7_clean.json',\n",
-    "        \"annotation_gdrive_id\": \"1b8UgWED20Gtkn0ovqizONTlFH-oNYJ_a\",\n",
-    "        \"video_gdrive_id\": \"1FJypI1WmZJj4iEo9nVfBvP8FjaoDf1Ob\"\n",
+    "        \"annotation_url\": f\"{public_base_url}/tracking/tracking_E7_clean.json\",\n",
+    "        \"video_url\": f\"{public_base_url}/video/E7.MOV\"\n",
     "    },\n",
     "    \"K9\": {\n",
     "        \"file\": 'tracking_K9_clean.json',\n",
-    "        \"annotation_gdrive_id\": \"12jLIHBySVG3G0Ie52NlmRHQ7U3Sv6ca-\",\n",
-    "        \"video_gdrive_id\": \"1iZMfmCJnYsIxBIXqVwRrpubO2-_uItHU\"\n",
+    "        \"annotation_url\": f\"{public_base_url}/tracking/tracking_K9_clean.json\",\n",
+    "        \"video_url\": f\"{public_base_url}/video/K9.MOV\"\n",
     "    },\n",
     "    \"S1\": {\n",
     "        \"file\": 'tracking_S1_clean.json',\n",
-    "        \"annotation_gdrive_id\": \"1VKNPRTnNb0n5oUBG9hx3ZkLns9CMcs7R\",\n",
-    "        \"video_gdrive_id\": \"1aGFLRtPjjiUZjY8k5xH-EKF3sHQSfNnE\"\n",
+    "        \"annotation_url\": f\"{public_base_url}/tracking/tracking_S1_clean.json\",\n",
+    "        \"video_url\": f\"{public_base_url}/video/S1.MOV\"\n",
     "    },\n",
     "    \"4_per_23\": {\n",
     "        \"file\": \"tracking_4_per_23_clean.json\",\n",
-    "        \"annotation_gdrive_id\": \"19EHp0idpYDbjqcR-LDWJhYmDBNmkL2ZY\",\n",
-    "        \"video_gdrive_id\": \"1A_bdzGDHy3JZo4x7gte_Uv09zQwDbLby\"\n",
+    "        \"annotation_url\": f\"{public_base_url}/tracking/tracking_4_per_23_clean.json\",\n",
+    "        \"video_url\": f\"{public_base_url}/video/4_per_23.MOV\"\n",
     "    },\n",
     "    \"5_per_12\": {\n",
     "        \"file\": \"tracking_5_per_12_clean.json\",\n",
-    "        \"annotation_gdrive_id\": \"1GTzxjlaBkqrJfBUoT1dq0TMaR21OXsva\",\n",
-    "        \"video_gdrive_id\": \"1Mx5Xsuat4nx_xvttZi04qpaKeywRSEhJ\"\n",
+    "        \"annotation_url\": f\"{public_base_url}/tracking/tracking_5_per_12_clean.json\",\n",
+    "        \"video_url\": f\"{public_base_url}/video/5_per_12.MOV\"\n",
     "    }\n",
     "}\n",
     "\n",
-    "# Create directories if they do not exist.\n",
     "os.makedirs(dataset_dir, exist_ok=True)\n",
     "os.makedirs(video_dir, exist_ok=True)\n",
     "\n",
-    "bar = tqdm(annotations.items(), desc=\"Downloading dataset and videos\")\n",
-    "for key, annotation_settings in bar:\n",
+    "bar = tqdm(annotations.items(), desc=\"Downloading from GCS\")\n",
+    "for key, ann in bar:\n",
     "    bar.set_postfix_str(key)\n",
     "\n",
-    "    annotations_file = os.path.join(dataset_dir, annotation_settings[\"file\"])\n",
+    "    annotations_file = os.path.join(dataset_dir, ann[\"file\"])\n",
     "    video_file = os.path.join(video_dir, f\"{key}.MOV\")\n",
-    "    annotation_file_id = annotation_settings[\"annotation_gdrive_id\"]\n",
-    "    video_file_id = annotation_settings[\"video_gdrive_id\"]\n",
     "\n",
-    "    # Check if each of the dataset units is present\n",
     "    if not os.path.exists(annotations_file):\n",
-    "        print(\"Downloading dataset...\")\n",
-    "        url = f'https://drive.google.com/uc?id={annotation_file_id}'\n",
-    "        gdown.download(url, annotations_file, quiet=False)\n",
+    "        print(f\"Downloading {ann['annotation_url']}\")\n",
+    "        urlretrieve(ann[\"annotation_url\"], annotations_file)\n",
     "\n",
     "    if not os.path.exists(video_file):\n",
-    "        print(\"Downloading video...\")\n",
-    "        url = f'https://drive.google.com/uc?id={video_file_id}'\n",
-    "\n",
-    "        gdown.download(url, video_file, quiet=False)"
+    "        print(f\"Downloading {ann['video_url']}\")\n",
+    "        urlretrieve(ann[\"video_url\"], video_file)"
    ]
   },
   {
